# seer-annotator

./: .gitignore  CLAUDE.md  README.md  bench_format_models.py  pyproject.toml
seer_annotator/: __init__.py  arbitrate_orchestrator.py  batch_runner.py  batching.py  caching.py  cli.py  config.py  llm.py  mapping.py  orchestrator.py  progress.py  rate_limiter.py  seer_client.py  store.py
seer_annotator/annotate/: citation.py  engine.py  parse.py  prompt.py  verify.py
seer_annotator/arbitrate/: prompt.py
seer_annotator/docs/: citations.md
seer_annotator/ui/: app.py
seer_annotator/ui/static/: index.html
tests/: test_arbitration.py  test_batch_runner.py  test_batching.py  test_integration.py  test_mapping.py  test_progress.py  test_split_pipeline.py  test_store.py
